<?xml version="1.0"?>
<package>
  <name>rosppl</name>
  <version>0.0.0</version>
  <description>The rosppl package</description>

  <maintainer email="seyedmah@buffalo.edu">Seyed Mahdi Shamsi</maintainer>
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosnodejs_examples</url> -->

  <author email="seyedmah@buffalo.edu">Seyed Mahdi Shamsi</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>

</package>
